--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+# Project specific
 ./lavalink/plugins/
+./src/main/resources/application-local.properties
 
+# Defaults
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -11,6 +14,7 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
