Fixed env var for guild ids

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 discord.bot.token=${DISCORD_BOT_TOKEN}
-discord.bot.enabledGuildsById=${ENABLED_BUILD_IDS}
+discord.bot.enabledGuildsById=${DISCORD_BOT_ENABLED_GUILD_IDS}
 lavalink.client.password=${LAVALINK_CLIENT_PASSWORD}
 lavalink.client.uri=${LAVALINK_CLIENT_URI}
